<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_restaurant_menu_black_24dp"
        app:showAsAction="withText"
        android:title="@string/menu" />

    <item
        android:id="@+id/navigation_bonus"
        android:icon="@drawable/ic_store_black_24dp"
        app:showAsAction="withText"
        android:title="@string/nadigationOurRestorants" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        app:showAsAction="withText"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="withText"
        android:title="@string/info" />


</menu>