<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--<item android:id="@+id/action_settings"-->
        <!--android:title="@string/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->
    <item android:id="@+id/action_search"
        android:title="Найти блюдо"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_cart"
        android:title="@string/action_cart"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/restart"
        android:title="@string/menuMainUpdate"
        android:icon="@drawable/ic_autorenew_black_24dp"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_signout"
        android:title="@string/action_signout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:orderInCategory="300"
        app:showAsAction="ifRoom" />
</menu>