<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:id="@+id/rowParent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:cardCornerRadius="5dp"
    tools:context=".OrdersActivity">


    <LinearLayout
        android:id="@+id/line1"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/number_const"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:text="@string/ordRowOrders"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="17sp"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_below="@+id/line1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/date_create_const"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:text="@string/ordRowCreate"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/date_create"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_products"
        android:layout_below="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_below="@+id/line2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/restaurant_const"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:text="@string/ordRowRestaurant"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/restaurant_create"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_below="@+id/line3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/status_const"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:text="@string/ordRowStatus"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/status_create"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line5"
        android:layout_below="@+id/line4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/what_todo_const"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:text="@string/ordRowWhatToDo"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/what_todo_create"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line6"
        android:layout_below="@+id/line5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/delivery_const"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:text="@string/ordRowAddress"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/delivery_create"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line7"
        android:layout_below="@+id/line6"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/peoples_const"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:text="@string/ordRowPeoples"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/peoples_create"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line8"
        android:layout_below="@+id/line7"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/time_of_delivery_const"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:text="@string/ordRowTimeDelivery"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/time_of_delivery_create"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line9"
        android:layout_below="@+id/line8"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/comment_const"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:text="@string/ordRowComments"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/comment_create"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line10"
        android:layout_below="@+id/line9"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/total_cost_const"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/ordRowTotal"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/total_cost_create"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/button_add_in_orders"
        android:layout_below="@+id/line10"
        android:text="@string/ordRowAddDish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>